<resources>
    <string name="app_name">PDSA</string>
    <string name="newUser">Welcome to PDSA</string>
    <string name="signup">Please sign up to continue</string>
    <string name="keyLength">Key length: %1$s</string>
    <string name="privateKey">Private key: %1$s</string>
    <string name="publicKey">Public key: %1$s</string>
    <string name="name">Name</string>
    <string name="nameVal">Name: %1$s</string>
    <string name="phone">Phone</string>
    <string name="phoneVal">Phone: %1$s</string>
    <string name="email">Email</string>
    <string name="emailVal">Email: %1$s</string>
    <string name="signupBTN">Sign Up</string>
    <string name="Account">Account Details</string>
    <string name="resetKeys">Reset Keys</string>
    <string name="signOut">Sign Out</string>
    <string name="showKey">Show Keys</string>
    <string name="hideKeys">Hide Keys</string>
    <string name="hide">**********</string>
    <string name="PDSA">PDSA</string>
    <string name="instructions">Sign/Validate File Page</string>
    <string name="selectFile">select file</string>
    <string name="signFile">sign file</string>
    <string name="validateFile">validate file</string>
    <string name="viewAccount">view account</string>
    <string name="filePath">file: %1$s</string>
    <string name="notValidFile">❌❌❌ Not A Valid File ❌❌❌</string>
    <string name="progressText">Please wait</string>
    <string name="android11A">⚠️⚠️⚠️ Please Note ⚠️⚠️⚠️</string>
    <string name="android11B">️On Android 11 and higher, the access restricted to the following directories:</string>
    <string name="android11C">⛔️ The root directory of the internal storage volume.</string>
    <string name="android11D">⛔️ The root directory of each SD card volume that the device manufacturer considers to be reliable.</string>
    <string name="android11E">⛔️ The Download directory.</string>
    <string name="optional">Output file name (optional)</string>
    <string name="useOutputFileName">Use output file name</string>
    <string name="fileSigned">✅ File Signed! ✅</string>
    <string name="saveFile">Save File</string>
    <string name="shareFile">Share File</string>
    <string name="close">CLOSE</string>
    <string name="notSaved">❌❌❌ File not Saved ❌❌❌</string>
    <string name="savedSuccessfully">✅✅✅ File Saved ✅✅✅</string>
</resources>