<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/account_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/Account"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_LBL_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/account_LBL_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameVal" />

            <TextView
                android:id="@+id/account_LBL_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/emailVal" />

            <TextView
                android:id="@+id/account_LBL_phone"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/phoneVal" />

            <LinearLayout
                android:id="@+id/account_LAY_keys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/account_LBL_private"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/privateKey" />

                <TextView
                    android:id="@+id/account_LBL_public"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/publicKey" />

                <TextView
                    android:id="@+id/account_LBL_keyLen"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/keyLength" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/account_BTN_showKeys"
                app:icon="@drawable/ic_visibility"
                app:iconGravity="textStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/showKey"
                android:textSize="26sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/account_BTN_reset"
                app:icon="@drawable/ic_autorenew"
                app:iconGravity="textStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/resetKeys"
                android:textSize="26sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/account_BTN_signOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/signOut"
                android:textSize="26sp"
                app:icon="@drawable/ic_logout"
                app:iconGravity="textStart" />
        </LinearLayout>

    </ScrollView>


</RelativeLayout>