<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <TextView
        android:id="@+id/main_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/PDSA"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/main_LBL_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/main_LBL_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/instructions"
        android:textSize="25sp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_LBL_instructions"

        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_BTN_selectFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectFile"
                android:textSize="26sp"
                app:icon="@drawable/ic_attach_file"
                app:iconGravity="textStart" />

            <TextView
                android:id="@+id/main_LBL_uri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/filePath"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_EDT_outputName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:hint="@string/optional">

                <CheckBox
                    android:id="@+id/main_CB_outputName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/useOutputFileName" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_BTN_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/signFile"
                android:textSize="26sp"
                app:icon="@drawable/ic_create"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_BTN_validate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/validateFile"
                android:textSize="26sp"
                app:icon="@drawable/ic_flaky"
                app:iconGravity="textStart" />

            <TextView
                android:id="@+id/main_LBL_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_BTN_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/viewAccount"
                android:textSize="26sp"
                app:icon="@drawable/ic_person"
                app:iconGravity="textStart" />

            <LinearLayout
                android:id="@+id/main_LAY_android11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="@string/android11A" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="15dp"
                    android:text="@string/android11B" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dp"
                    android:text="@string/android11C" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dp"
                    android:text="@string/android11D" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dp"
                    android:text="@string/android11E" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/main_LAY_progressDialog"
        style="@style/progress"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:elevation="20dp"
        android:orientation="vertical"


        android:visibility="gone">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_LBL_progressText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/progressText"
            android:textSize="30sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/progressText"
            android:textSize="30sp" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/main_pro_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:indicatorSize="75dp"
            app:trackColor="@color/blue_500" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_LAY_signedDialog"
        style="@style/progress"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_LBL_signed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fileSigned"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_BTN_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/saveFile"
            android:textSize="26sp"
            app:icon="@drawable/ic_save"
            app:iconGravity="textStart" />

        <TextView
            android:id="@+id/main_LBL_saveResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_BTN_shareFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/shareFile"
            android:textSize="26sp"
            app:icon="@drawable/ic_send"
            app:iconGravity="textStart" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_BTN_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/close"
            android:textSize="26sp"
            app:icon="@drawable/ic_cancel"
            app:iconGravity="textStart" />
    </LinearLayout>

</RelativeLayout>